# Typr

./: CONTRIBUTING.md  README.md  __init__.py  install.sh  pyproject.toml
.github/workflows/: python-publish.yml
src/: main.py
src/WordLists/: Loki_Word_List_EN.txt
tests/: test_results_invalid.py
