[project]
name = "typr"

version = "1.0.1.18"

description = "typr is a beautiful & simple typing test application that runs in your cli of choice<3"

readme = "README.md"

requires-python = ">=3.10"

license = {file = "LICENSE.md"}

keywords = ["sample", "setuptools", "development"]

authors = [
  {name = "Daksh Kaul", email = "dakshkaul7790@gmail.com" }
]

maintainers = [
  {name = "Daksh Kaul", email = "dakshkaul7790@gmail.com" }
]

classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: Stable",

  "Intended Audience :: Typing Entusiasts",
  "Topic :: CLI Applications :: Typing Test Application",

  "License :: OSI Approved :: GPL-3.0 license",

  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "rich",
]

[project.urls]
"Homepage" = "https://github.com/DriftingOtter/Typr"
"Bug Reports" = "https://github.com/DriftingOtter/Typr/issues"
"Funding" = "https://kofi.com/driftingotter"

[tool.setuptools]
package-data = {"sample" = ["*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

